# minimum-messenger

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  messenger_nginx.conf
.claude/: settings.json  settings.local.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  logging.py  metrics.py  rate_limit.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/modules/admin/: router.py
backend/app/modules/attachments/: models.py  router.py  schemas.py  service.py
backend/app/modules/audit/: models.py  service.py
backend/app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/chats/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/contacts/: models.py  router.py  schemas.py  service.py
backend/app/modules/devices/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/keys/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/messages/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/users/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/websocket/: events.py  manager.py  router.py
backend/app/modules/workers/: models.py  outbox.py
backend/app/shared/: dependencies.py  models.py  utils.py
backend/app/tests/: conftest.py  test_auth.py
docs/: E2EE.md  MOBILE.md  SCHEMA.md  WEBSOCKET.md
(+57 files in other folders)
